// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passing command executes echo 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  Hello, World!!


"
`;

exports[`passing command executes node 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  { abc: 123, def: 456 }


"
`;

exports[`passing functions executes echo 1`] = `
Object {
  "arguments": Object {
    "argv": Array [
      "Hello, World!!",
    ],
    "options": Object {
      "encoding": "utf8",
    },
  },
}
`;

exports[`passing functions executes echo 2`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  Hello, World!!


"
`;

exports[`passing functions executes node 1`] = `
Object {
  "arguments": Object {
    "argv": Array [],
    "options": Object {
      "input": "console.log({abc: 123, def: 456})",
    },
  },
}
`;

exports[`passing functions executes node 2`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  { abc: 123, def: 456 }


"
`;
